# flower_libtorch

./: .gitignore
examples/quickstart_cpp/: CMakeLists.txt  fedavg_cpp.py  get_data.ipynb
examples/quickstart_cpp/include/: input_transform.h  libtorch_client.h  line_fit_model.h  pointnet_model.h  simple_client.h  tiny_dnn_client.h
examples/quickstart_cpp/params_data/: test_data_params_bn_1_bias.cpp  test_data_params_bn_1_weight.cpp  test_data_params_bn_2_bias.cpp  test_data_params_bn_2_weight.cpp  test_data_params_bn_3_bias.cpp  test_data_params_bn_3_weight.cpp  test_data_params_bn_4_bias.cpp  test_data_params_bn_4_weight.cpp  test_data_params_bn_5_bias.cpp  test_data_params_bn_5_weight.cpp  test_data_params_bn_6_bias.cpp  test_data_params_bn_6_weight.cpp  test_data_params_conv_1_bias.cpp  test_data_params_conv_1_weight.cpp  test_data_params_conv_2_bias.cpp  test_data_params_conv_2_weight.cpp  test_data_params_conv_3_bias.cpp  test_data_params_conv_3_weight.cpp  test_data_params_conv_4_bias.cpp  test_data_params_conv_4_weight.cpp  test_data_params_fc_1_bias.cpp  test_data_params_fc_2_bias.cpp  test_data_params_fc_2_weight.cpp  test_data_params_feature_transform_bn_1_bias.cpp  test_data_params_feature_transform_bn_1_weight.cpp  test_data_params_feature_transform_bn_2_bias.cpp  test_data_params_feature_transform_bn_2_weight.cpp  test_data_params_feature_transform_bn_3_bias.cpp  test_data_params_feature_transform_bn_3_weight.cpp  test_data_params_feature_transform_conv_1_bias.cpp  test_data_params_feature_transform_conv_1_weight.cpp  test_data_params_feature_transform_conv_2_bias.cpp  test_data_params_feature_transform_conv_2_weight.cpp  test_data_params_feature_transform_conv_3_bias.cpp  test_data_params_feature_transform_conv_3_weight.cpp  test_data_params_feature_transform_fc_1_bias.cpp  test_data_params_feature_transform_fc_2_bias.cpp  test_data_params_feature_transform_fc_2_weight.cpp  test_data_params_input_transform_bn_1_bias.cpp  test_data_params_input_transform_bn_1_weight.cpp  (+15 more)
examples/quickstart_cpp/src/: half_function.cc  input_transform.cpp  libtorch_client.cpp  line_fit_model.cc  linear_algebra_util.cc  main.cc  pointnet_model.cpp  simple_client.cc  synthetic_dataset.cc  tiny_dnn_client.cc
tiny-dnn/: .gitignore
tiny-dnn/cereal/: access.hpp  cereal.hpp
tiny-dnn/cereal/archives/: adapters.hpp  binary.hpp  json.hpp  portable_binary.hpp  xml.hpp
tiny-dnn/cereal/details/: helpers.hpp  polymorphic_impl.hpp  traits.hpp
tiny-dnn/cereal/types/: array.hpp  base_class.hpp  bitset.hpp  boost_variant.hpp  common.hpp  deque.hpp  forward_list.hpp  list.hpp  map.hpp  memory.hpp  polymorphic.hpp  queue.hpp  set.hpp  stack.hpp  string.hpp  tuple.hpp  unordered_map.hpp  unordered_set.hpp  utility.hpp  valarray.hpp  vector.hpp
tiny-dnn/examples/mnist/: quantized.cpp  test.cpp  train.cpp
tiny-dnn/test/: print_device.cpp
tiny-dnn/tiny_dnn/: half_define.h  network.h  node.h
tiny-dnn/tiny_dnn/activations/: relu_layer.h  softmax_layer.h
tiny-dnn/tiny_dnn/core/kernels/: fully_connected_op_internal.h
tiny-dnn/tiny_dnn/layers/: batch_normalization_layer.h  dropout_layer.h
tiny-dnn/tiny_dnn/optimizers/: optimizer.h
